<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_home"
    android:background="@color/bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/dimen20"
        >

        <ImageView
            android:contentDescription="@string/app_logo"
            android:layout_width="@dimen/dimen50"
            android:layout_height="@dimen/dimen50"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dimen20"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginRight="@dimen/dimen10"
                android:layout_marginEnd="@dimen/dimen10"
                android:textSize="25sp"
                android:fontFamily="@font/pdbold"
                android:textColor="@color/colorPrimary"
                tools:ignore="RtlCompat" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="25sp"
                android:fontFamily="@font/pdreg"
                android:textColor="@color/colorPrimary"
                tools:ignore="RtlCompat" />
        </LinearLayout>
        <ImageView
            android:contentDescription="@string/saya"
            android:layout_width="@dimen/dimen100"
            android:layout_height="@dimen/dimen100"
            android:src="@drawable/saya"
            android:layout_margin="@dimen/dimen10"
            />

        <TextView
            android:id="@+id/about"
            android:layout_marginRight="@dimen/dimen10"
            android:layout_marginLeft="@dimen/dimen10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAlignment="center"
            android:textSize="15sp"
            android:fontFamily="@font/srreg"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/dimen20"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/about2"
            android:layout_marginRight="@dimen/dimen10"
            android:layout_marginLeft="@dimen/dimen10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about2"
            android:textAlignment="center"
            android:textSize="15sp"
            android:fontFamily="@font/srreg"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlCompat" />
        <TextView
            android:id="@+id/interest"
            android:layout_marginRight="@dimen/dimen10"
            android:layout_marginLeft="@dimen/dimen10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            android:layout_margin="@dimen/dimen20"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/pdbold"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_marginRight="@dimen/dimen10"
            android:layout_marginLeft="@dimen/dimen10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobby"
            android:textAlignment="center"
            android:textSize="15sp"
            android:fontFamily="@font/srreg"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/dimen20"
            tools:ignore="RtlCompat" />
        <TextView
            android:layout_marginRight="@dimen/dimen10"
            android:layout_marginLeft="@dimen/dimen10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen20"
            android:text="@string/cita"
            android:textAlignment="center"
            android:textSize="15sp"
            android:fontFamily="@font/srreg"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlCompat" />
    </LinearLayout>
</FrameLayout>