<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".Fragment_gallery">
    <LinearLayout
        android:background="@color/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <ImageView
            android:contentDescription="@string/app_logo"
            android:layout_width="@dimen/dimen50"
            android:layout_height="@dimen/dimen50"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen20"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen5"
            android:layout_marginBottom="@dimen/dimen20"
            android:layout_gravity="center"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginRight="@dimen/dimen10"
                android:layout_marginEnd="@dimen/dimen10"
                android:textSize="25sp"
                android:fontFamily="@font/pdbold"
                android:textColor="@color/colorPrimary"
                tools:ignore="RtlCompat" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textSize="25sp"
                android:fontFamily="@font/pdreg"
                android:textColor="@color/colorPrimary"
                tools:ignore="RtlCompat" />
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/recycle3"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>